# hiperf_computing

./: .gitignore
levenstein/: CMakeLists.txt  compile_big.sh  compile_phi.sh  compile_small.sh  du4.err.gold.txt  du4levenstein.cpp  du4levenstein.hpp  dummy_levenstein.hpp  exception.hpp  exp4main.cpp  functional_tester.hpp  levenstein_tester_avx512.hpp  levenstein_tester_sse.hpp  makefile  makefile-old  move_files.sh  my_main.cmake  my_main.cpp  remote_run.sh  task4.hpp  testbed.hpp
matrix_mult/: CMakeLists.txt  Makefile  du5.err.gold.txt  du5main.cpp  du5matrix.hpp  task5.hpp  try.cpp
